--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Projeto_Vendas_Curso.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\Wendey-HD\\Documents\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-5.1.47.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=br.com.projeto.jdbc.TestaConexao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
